# mygame

./: .clang-format  .gitmodules  build.rb
.github/workflows/: build_android.yaml
.scripts/: format.rb
android/: build.gradle.kts  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/c/: CMakeLists.txt  android_assets_manager.c  android_assets_manager.h  android_assets_manager_jni.c  android_assets_manager_jni.h  main.c
android/app/src/main/c/include/: android_assets_manager_jni.h  android_assets_manager_types.h
android/app/src/main/c/src/: android_assets_manager_jni.c  main.c
android/app/src/main/java/dev/trindadedev/mygame/: MyGameActivity.java  MyGameAssetsManager.java  MyGamePadView.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/: libs.versions.toml
cmake/: CheckPackages.cmake  CoreDeps.cmake
core/: CMakeLists.txt
core/include/mygame/: assets.h  color.h  draw.h  font.h  game_main.h  image.h  state.h
core/include/mygame/scene/: home.h  scene.h
core/src/: draw.c  font.c  game_main.c  image.c  state.c  window.c
core/src/scene/: home.c  scene.c
desktop/: CMakeLists.txt
desktop/include/: desktop_assets_manager.h
desktop/src/: desktop_assets_manager.c  main.c
include/mygame/: draw.h  image.h  state.h  window.h
src/: color.c  draw.c  font.c  image.c  main.c  state.c  window.c
src/scene/: game.c  home.c
(+1 files in other folders)
